# julia-pkg-scripts

./: CMakeLists.txt  gen-archcn-julia-git-jll.jl  gen-archcn-julia-git.jl  julia-gen-jll.jl  julia-gen-jll.sh  julia-gen-timestamp-fix.sh  julia-install-pkg.sh  julia-list-deps.jl  julia-read-soname.sh
